# virtual-house-walkthrough

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md  package-lock.json  pyproject.toml
apps/api/: main.py
docs/: ROADMAP.md
tests/: conftest.py  test_api.py  test_loader.py  test_plane_detection.py  test_preprocess.py  test_process.py
viewer/: index.html  package-lock.json  package.json  vite.config.js
viewer/src/: controls.js  main.js  model.js  pointcloud.js  state.js  upload.js  walkMode.js  wallTools.js
