[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-twin-platform"
version = "0.1.0"
description = "Digital Twin Real Estate Platform – point-cloud ingestion & parametric model pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "plyfile>=1.0",
    "pydantic>=2.0",
    "click>=8.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
dt-pipeline = "packages.pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
